# python-notebooks

./: README.md  pyproject.toml  tox.ini
notebooks/spack/: list_packages.ipynb
