[tool.poetry]
name = "python-notebooks"
version = "0.1.0"
description = "Python Notebooks"
authors = ["Altaf Ali <altaf.haider.ali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^4.0.0"
macholib = "^1.16.2"
requests = "<2.30.0"
python-box = {extras = ["all"], version = "^7.0.1"}

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
autoflake = "^1.7.8"
black = "^23.1.0"
flake8 = "^5.0.4"
flake8-docstrings = "^1.7.0"
isort = "^5.12.0"
mypy = "^v1.0.1"
mypy-extensions = "^1.0.0"
nbqa = "^1.7.0"
pre-commit = "^3.1.1"
toml = "^0.10.2"
tox = "^4.4.6"
twine = "^4.0.2"
types-setuptools = "^67.7.0.1"
types-PyYAML = "^6.0.12.9"
types-requests = "^2.30.0.0"
virtualenv = "^20.20.0"

[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
skip_gitignore = true

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true

